--- a/GE Item Lookup/MainWindow.xaml
+++ b/GE Item Lookup/MainWindow.xaml
@@ -49,14 +49,6 @@
         <Label Content="The Grandest Exchange" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" Foreground="White" FontSize="14" FontFamily="Segoe UI Symbol" Height="31" Width="189"/>
         <Grid x:Name="DragBar" HorizontalAlignment="Left" Height="31" VerticalAlignment="Top" Width="729" Grid.ColumnSpan="2"/>
         <Rectangle x:Name="DragRect" HorizontalAlignment="Left" Height="38" Margin="-1,-7,0,0" VerticalAlignment="Top" Width="993" MouseDown="DragRect_MouseDown" Fill="#02000000" Grid.ColumnSpan="2"/>
-        <DataGrid x:Name="IdListGrid" CanUserAddRows="False" HorizontalAlignment="Left" Height="510" Margin="0,63,0,0" VerticalAlignment="Top" Width="701" AutoGenerateColumns="False" Background="#7FF0F0F0" SelectionChanged="IdListGrid_SelectionChanged" MouseDoubleClick="IdListGrid_MouseDoubleClick" Grid.ColumnSpan="2">
-            <DataGrid.Columns>
-                <DataGridTextColumn Width="45" IsReadOnly="True" Binding="{Binding id}" ClipboardContentBinding="{x:Null}" Header="Id" SortDirection="Ascending"/>
-                <DataGridTextColumn Width="200" IsReadOnly="True" Binding="{Binding name}" ClipboardContentBinding="{x:Null}" Header="Name"/>
-                <DataGridTextColumn Width="200" IsReadOnly="True" Binding="{Binding type}" ClipboardContentBinding="{x:Null}" Header="Category"/>
-                <DataGridTextColumn Width="*" Header="Custom Categories" Binding="{Binding notes}"/>
-            </DataGrid.Columns>
-        </DataGrid>
         <TextBox x:Name="FilterBox" HorizontalAlignment="Left" Height="23" Margin="0,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="701" ToolTip="Type Filter Text Here" Text="Type Filter Text Here" FontStyle="Italic" Foreground="#FF6B6B6B" GotFocus="FilterBox_GotFocus" LostFocus="FilterBox_LostFocus" TextChanged="FilterBox_TextChanged" Grid.ColumnSpan="2"/>
         <Rectangle x:Name="StatusBar" HorizontalAlignment="Left" Height="32" Margin="-1,573,0,0" Stroke="Black" VerticalAlignment="Top" Width="1117" Fill="#8C0E0E0E" Grid.ColumnSpan="2"/>
         <ProgressBar x:Name="StatusProgress" Visibility="Hidden" HorizontalAlignment="Left" Height="27" Margin="20,576,0,0" VerticalAlignment="Top" Width="199" IsEnabled="False" Grid.Column="1" Foreground="#FF01D328"/>
@@ -144,5 +136,28 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
+        <Rectangle Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="18" Margin="-1,63,0,0" VerticalAlignment="Top" Width="702">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="Black" Offset="1"/>
+                    <GradientStop Color="#33FF0000" Offset="0.438"/>
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <DataGrid x:Name="IdListGrid" CanUserAddRows="False" HorizontalAlignment="Left" Height="510" Margin="0,63,0,0" VerticalAlignment="Top" Width="701" AutoGenerateColumns="False" Background="{x:Null}" SelectionChanged="IdListGrid_SelectionChanged" MouseDoubleClick="IdListGrid_MouseDoubleClick" Grid.ColumnSpan="2" GridLinesVisibility="Horizontal" HorizontalGridLinesBrush="#7F000000" RowBackground="#004F4F4F" AreRowDetailsFrozen="True" AlternatingRowBackground="#7F000000" Foreground="White" HeadersVisibility="Column">
+            <DataGrid.ColumnHeaderStyle>
+                <Style TargetType="{x:Type DataGridColumnHeader}">
+                    <Setter Property="Background"
+        				Value="Transparent" />
+                </Style>
+            </DataGrid.ColumnHeaderStyle>
+            <DataGrid.Columns>
+                <DataGridTextColumn Width="45" IsReadOnly="True" Binding="{Binding id}" ClipboardContentBinding="{x:Null}" Header="Id" SortDirection="Ascending"/>
+                <DataGridTextColumn Width="200" IsReadOnly="True" Binding="{Binding name}" ClipboardContentBinding="{x:Null}" Header="Name"/>
+                <DataGridTextColumn Width="200" IsReadOnly="True" Binding="{Binding type}" ClipboardContentBinding="{x:Null}" Header="Category"/>
+                <DataGridTextColumn Width="*" Header="Custom Categories" Binding="{Binding notes}"/>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </Window>
