--- a/GE Item Lookup/MainWindow.xaml
+++ b/GE Item Lookup/MainWindow.xaml
@@ -7,7 +7,7 @@
             <ColumnDefinition Width="482*"/>
             <ColumnDefinition Width="635*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="Minimize" Focusable="False" Content="_" HorizontalAlignment="Left" Height="68" Margin="512,-37,0,574" VerticalAlignment="Bottom" Width="64" FontSize="36" FontWeight="Bold" Foreground="White" Background="#7F16004F" Click="Minimize_Click" ClickMode="Press" Panel.ZIndex="1" Grid.Column="1"/>
+        <Button x:Name="Minimize" Focusable="False" Content="_" HorizontalAlignment="Left" Height="68" Margin="512,-37,0,574" VerticalAlignment="Bottom" Width="64" FontSize="36" FontWeight="Bold" Foreground="White" Background="#7F16004F" Click="Minimize_Click" ClickMode="Press" Panel.ZIndex="1" Grid.Column="1" BorderBrush="{x:Null}"/>
         <Button x:Name="Exit" Focusable="False" Content="X" HorizontalAlignment="Left" VerticalContentAlignment="Bottom" Padding="5,-2" Margin="574,-37,-3,574" Width="64" FontSize="22" FontWeight="Bold" Foreground="White" Background="#7FFF0000" RenderTransformOrigin="0.558,1.274" FontFamily="Tempus Sans ITC" Click="Exit_Click" Panel.ZIndex="1" Grid.Column="1" BorderBrush="{x:Null}" BorderThickness="0" Height="68" VerticalAlignment="Bottom"/>
         <Rectangle Fill="#FF211717" HorizontalAlignment="Left" Height="605" Stroke="Black" VerticalAlignment="Top" Width="1117" Grid.ColumnSpan="2"/>
         <Rectangle HorizontalAlignment="Left" Height="605" Stroke="Black" VerticalAlignment="Top" Width="1117" Grid.ColumnSpan="2">
@@ -345,9 +345,15 @@
                 <DataGridTextColumn Width="*" Header="Custom Categories" Binding="{Binding notes}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Label x:Name="Visible_1" Content="&lt;- Item List Searches/Filters as you type" Grid.Column="1" HorizontalAlignment="Left" Margin="226,40,0,0" VerticalAlignment="Top" IsManipulationEnabled="True" Foreground="White" FontSize="14" Visibility="Visible" FontWeight="Bold"/>
-        <TextBlock x:Name="Visible_2" Text="Details will appear here if you click on an item! Double Click in the Custom Categories Column to make your own categories to search by!" TextWrapping="Wrap" Grid.Column="1" HorizontalAlignment="Left" Margin="224,79,0,0" VerticalAlignment="Top" IsManipulationEnabled="True" Foreground="White" FontSize="18" Visibility="Visible" FontWeight="Bold"/>
-        <TextBlock x:Name="Visible_3" Text="Track and see profits before selling here by managing your transactions!" TextWrapping="Wrap" Grid.Column="1" HorizontalAlignment="Left" Margin="219,338,0,0" VerticalAlignment="Top" IsManipulationEnabled="True" Foreground="White" FontSize="18" Visibility="Visible" FontWeight="Bold" Height="112" Width="357"/>
-        <TextBlock x:Name="Visible_4" Text="Use the Custom Filters Dropdown box below to quickly Search for your Custom Filters or  Current Investments!" TextWrapping="Wrap" Grid.Column="1" HorizontalAlignment="Left" Margin="223,186,0,0" VerticalAlignment="Top" IsManipulationEnabled="True" Foreground="White" FontSize="18" Visibility="Visible" FontWeight="Bold" Height="74" Width="406"/>
+        <Label x:Name="Visible_1" Content="&lt;- Item List Searches/Filters as you type" Grid.Column="1" HorizontalAlignment="Left" Margin="221,39,0,0" VerticalAlignment="Top" IsManipulationEnabled="True" Foreground="White" FontSize="14" Visibility="Visible" FontWeight="Bold"/>
+        <TextBlock x:Name="Visible_2" Text="Details will appear here if you click on an item! Double Click in the Custom Categories Column to make your own categories to search by!" TextWrapping="Wrap" Grid.Column="1" HorizontalAlignment="Left" Margin="227,79,0,0" VerticalAlignment="Top" IsManipulationEnabled="True" Foreground="White" FontSize="18" Visibility="Visible" FontWeight="Bold" TextAlignment="Center"/>
+        <TextBlock x:Name="Visible_3" Text="Track and see profits before selling here by managing your transactions!" TextWrapping="Wrap" Grid.Column="1" HorizontalAlignment="Left" Margin="238,386,0,0" VerticalAlignment="Top" IsManipulationEnabled="True" Foreground="White" FontSize="18" Visibility="Visible" FontWeight="Bold" Height="112" Width="357" TextAlignment="Center"/>
+        <TextBlock x:Name="Visible_4" Text="Use the Custom Filters Dropdown box below to quickly Search for your Custom Filters or  Current Investments!" TextWrapping="Wrap" Grid.Column="1" HorizontalAlignment="Left" Margin="226,186,0,0" VerticalAlignment="Top" IsManipulationEnabled="True" Foreground="White" FontSize="18" Visibility="Visible" FontWeight="Bold" Height="74" Width="406" TextAlignment="Center"/>
+        <Button x:Name="ClearData" Focusable="False" HorizontalAlignment="Left" VerticalContentAlignment="Bottom" Padding="5,-6" Margin="456,-37,0,574" Width="59" FontSize="22" FontWeight="Bold" RenderTransformOrigin="0.558,1.274" FontFamily="Tempus Sans ITC" Click="ClearData_Click" Panel.ZIndex="1" Grid.Column="1" BorderBrush="{x:Null}" BorderThickness="0" Height="68" VerticalAlignment="Bottom" Background="#7F1ABD00">
+                <StackPanel Height="35" Width="35">
+                <Image Source="1407887197_55278.ico" Height="27" />
+
+                </StackPanel>
+        </Button>
     </Grid>
 </Window>
